--- a/Assets/UI Toolkit/UIDocument.uxml
+++ b/Assets/UI Toolkit/UIDocument.uxml
@@ -1,4 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement name="Background" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; width: 100%; height: 100%; background-image: url(&apos;project://database/Assets/Textures/Background_06.png?fileID=21300000&amp;guid=96274b6f4982041558dfdc5471747076&amp;type=3#Background_06&apos;);" />
-    <ui:VisualElement name="Background" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; background-image: url(&apos;project://database/Assets/Textures/Background_02.png?fileID=21300000&amp;guid=1ba70e132f28941ed9977c1a213eb0a4&amp;type=3#Background_02&apos;); width: 100%; height: 100%;" />
+    <ui:VisualElement name="Background" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; background-image: url(&apos;project://database/Assets/Textures/Background_02.png?fileID=21300000&amp;guid=1ba70e132f28941ed9977c1a213eb0a4&amp;type=3#Background_02&apos;); width: 100%; height: 100%;">
+        <ui:VisualElement name="VisualElement" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Textures/Character_Sample01_l.png?fileID=2800000&amp;guid=1ebe9d3ac5ce74f3589c006da297bdc7&amp;type=3#Character_Sample01_l&apos;); width: 203px; height: 226px; position: absolute; top: 403px; left: 877px;" />
+        <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; width: 155px; height: 81px; background-image: url(&apos;project://database/Assets/Textures/Btn_MainButton_Yellow.Png?fileID=2800000&amp;guid=804461bef59b141dba258fc997c8ca15&amp;type=3#Btn_MainButton_Yellow&apos;); top: 978px; left: 1701px;">
+            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; width: 55px; height: 50px; background-image: url(&apos;project://database/Assets/Textures/Icon_ImageIcon_Knife_Battle.png?fileID=2800000&amp;guid=455d317bd36c5444483f77940660f34b&amp;type=3#Icon_ImageIcon_Knife_Battle&apos;); top: 13px; left: 8px;" />
+            <ui:Label tabindex="-1" text="BATTLE" display-tooltip-when-elided="true" style="position: absolute; width: 69px; height: 23px; top: 23px; left: 73px; color: rgb(255, 255, 255); -unity-font-style: bold;" />
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
+    </ui:VisualElement>
 </ui:UXML>
